--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "text-compare-angular",
   "version": "1.0.0",
   "author": {
-    "name": "Rong Zhuang",
-    "email": "jojozhuang@gmail.com"
+    "name": "hondanho",
+    "email": "hondanho@gmail.com"
   },
   "license": "MIT",
   "scripts": {
